k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: caldrith
  labels:
    app: caldrith
spec:
  type: ClusterIP
  selector:
    app: caldrith
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
